kubernetes/dashy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  labels:
    app: dashy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          ports:
            - containerPort: 80
