kubernetes/dashy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service

spec:
  selector:
    app: dashy
  ports:
    - name: http
      port: 80
