kubernetes/dashy/test.service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service

spec:
  selector:
    app: dashy
  type: LoadBalancer
  LoadBalancerIP: 192.168.14.75
