kubernetes/dashy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: "dashy.sugjo.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy-service
            port:
              number: 80
  tls:
  - hosts:
    - dashy.sugjo.dev
    secretName: sugjodev
